# Projekt-Haskell

./: SkoczkiTests.hs  skoczki.cabal  skoczki.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
